main.css
@font-face {
  font-family: 'icomoon';
  src: url('fonts/icomoon.woff') format('woff');
  font-display: block;
}

@font-face {
  font-family: 'Roboto';
  src: local('Roboto Regular'), url('fonts/Roboto-Regular.ttf') format('truetype');
  font-display: block;
}

* {
  box-sizing: border-box;
  margin: 0;
}

html {
  scroll-behavior: smooth;
}

body {
  --layout-spacing: max(min(6vw, 5rem), 2rem);
  --side-spacing: clamp(1rem, 5vw, 3rem);
  --navbar-height: 50px;
  padding: 0;
  padding-top: var(--layout-spacing);
  font-family: 'Roboto', system-ui, sans-serif;
  line-height: 1.5;
  font-size: 15px;
  display: flex;
  flex-direction: column;
  min-height: 100svh;
  width: 100vw;
}

body > * {
  margin: 0 auto;
  width: 100%;
  max-width: 70ch;
  padding: 0 var(--side-spacing);
}

body > * + * {
  padding-top: var(--layout-spacing);
}

body.home {
  padding-top: 0;
  align-content: center;
  min-height: 200svh;
}

main {
  display: flex;
  flex-grow: 1;
  flex-direction: column;
}

body.home header {
  display: grid;
  place-content: center;
  height: 100svh;
  flex-shrink: 0;
  color: #222;
  padding: var(--layout-spacing) 0;
  background: linear-gradient(60deg, #f2faff, #fffdfe);
  max-width: unset;
}

header .content {
  padding: 2rem;
  margin: var(--side-spacing);
  background: #ffffffa0;
  border-radius: 9px;
  box-shadow: 0px 0px 6px #00000010;
  max-width: 60ch;
}

header .content > * + * {
  margin-top: 1rem;
}

header h1:after {
  content: "";
  display: inline-block;
  position: relative;
  top: 0.24ch;
  height: 1.8ch;
  width: 4px;
  background: #333;
  margin: auto 0;
  margin-left: 2px;
  animation: blink 1.2s forwards;
  animation-iteration-count: infinite;
  animation-timing-function: linear;
}

header a {
  animation: slide-in .6s;
  animation-timing-function: ease-out;
}

body.home header:after {
  content: "";
  width: 1.5rem;
  height: 1.5rem;
  display: block;
  position: absolute;
  bottom: 3rem;
  left: 0;
  right: 0;
  margin: auto;
  border: solid #0005;
  border-width: 0 1.5px 1.5px 0;
  border-radius: 0 0 2px 0;
  transform: rotate(45deg);
  animation: bob 5s ease-in-out infinite;
}

@keyframes bob {
  45% { translate: 0 0px; }
  50% { translate: 0 -2px; }
  55% { translate: 0 0px; }
}

@keyframes blink {
  from { opacity: 0 }
  45% { opacity: 0 }
  50% { opacity: 1 }
  95% { opacity: 1 }
  to { opacity: 0 }
}

@keyframes slide-in {
  from {
    transform: translateX(-2px);
    opacity: 0.9;
  }
  to {
    transform: translateY(0px);
    opacity: 1;
  }
}

.action {
  color: #222;
  text-decoration: none;
  background: #a9f2a5;
  display: block;
  width: fit-content;
  padding: .5rem 1rem;
  border-radius: 6px;
}

.title {
  width: 100%;
  margin-bottom: min(6vw, 4rem);
}

.title h1 {
  font-weight: lighter;
  margin-bottom: 8px;
}

img {
  max-height: 24rem;
  max-width: 100%;
  width: auto;
  height: auto;
  object-fit: cover;
  position: relative;
  margin: 2.5rem auto !important;
  display: block;
  border-radius: 9px;
}

img:first-child {
  margin-top: 0 !important;
}

img::after {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  box-shadow: 0 0 100px rgba(0,0,0,0.4) inset;
}

header a {
  color: inherit;
  display: inline-block;
  text-decoration: none;
  margin: 0 4px;
}

.logo a {
  display: inline-block;
}

.logo img {
  display: block;
  margin: 0 !important;
  height: 36px;
  border-radius: 0;
  filter: invert(100%);
}

header nav {
  margin-left: auto;
}

header nav ul {
  list-style: none;
  padding: 0;
}

header nav li {
  display: inline;
  font-size: 12pt;
}

footer p {
  font-size: 9pt;
}

footer {
  margin-bottom: 1em;
  color: #555;
  margin-top: auto;
}

body.home footer {
  color: #222;
}

article > p:first-child {
  font-size: 16px
}

:is(h1, h2, h3) {
  line-height: 1.2;
}

:is(h2, h3):not(:first-child) {
  margin-top: 2em;
}

:is(h1, h2, h3) > a {
  text-decoration: none;
  color: unset;
  display: block;
  width: 100%;
}

:is(h1, h2, h3) > a:hover {
  text-decoration: underline;
}

table {
  display: block;
  overflow-x: auto;
  white-space: nowrap;
  max-width: fit-content;
  box-shadow: 0px 3px 50px black;
}

article {
  text-align: justify;
}

main > * > * + * {
  margin-top: 1em;
}

a {
  color: #156974;
  text-underline-offset: 0.15em;
}

table {
  border-collapse: collapse;
}

:is(td, th) {
  padding: 6px 10px;
  border: 1px solid;
}

.grid {
  display: grid;
  grid-template-columns: repeat(1, 1fr);
  grid-gap: .8em;
  padding: 0;
  margin-bottom: 16px;
  place-content: center;
  height: fit-content;
}

.grid > li {
  list-style: none;
  display: block;
}

.grid a {
  display: block;
  color: inherit;
  text-decoration: none;
}

.grid small {
  display: block;
  color: #222;
  font-size: 9pt;
}

.links {
  padding-top: 1rem;
  user-select: none;
  margin-top: auto;
}

.links > * {
  margin-right: 10px;
}

.tag::before {
  content: "🏷️";
  margin-right: 8px;
}

@media (prefers-color-scheme: dark) {
  body {
    background: #202024;
    color: white;
  }
  a {
    color: #92bce6;
  }
  body.home header {
    color: white;
    background: #0001;
    box-shadow: 0 0 3px #0002;
  }
  .logo img {
    filter: unset;
  }
  .grid small {
    color: #ddd;
  }
  footer p {
    color: white;
  }
  header h1:after {
    background: #ddd;
  }
  body.home header .content {
    background: #ffffff08;
  }
  .action {
    background: #596e45;
    color: white;
  }
  body.home header:after {
    border-color: #fff8;
  }
}

